Fix now-playing module visibility

--- a/src/assets/theming/_playing-song.scss
+++ b/src/assets/theming/_playing-song.scss
@@ -1,6 +1,6 @@
 .listening-module {
   background-color: var(--background-color);
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+  border: 2px dashed var(--accent-color);
   border-radius: 15px;
   padding: 1em;
   color: var(--text-color);
